# reddit-bot

./: .gitignore  Main.hs  README.md  noob-bot.cabal  reply.md  words.list
src/: Classifier.hs  Examples.hs  Markdown.hs  NaiveBayes.hs  Parser.hs
test/: Main.hs
