name: reddit-bot
version: 0.1.0.0
build-type: Simple
cabal-version: >= 1.10
license: BSD3

executable reddit-bot
  main-is: Main.hs
  default-language: Haskell2010
  default-extensions: OverloadedStrings
  ghc-options: -Wall
  hs-source-dirs: ./, src/
  build-depends:
    base == 4.*,
    containers,
    either,
    parsec,
    reddit,
    text,
    transformers
