name: reddit-bot
version: 0.1.0.0
build-type: Simple
cabal-version: >= 1.10
license: BSD3

executable reddit-bot
  main-is: Main.hs
  default-language: Haskell2010
  default-extensions: OverloadedStrings
  ghc-options: -Wall
  hs-source-dirs: ./, src/
  build-depends:
    base == 4.*,
    containers,
    directory,
    either,
    mtl,
    parsec,
    reddit,
    strict,
    text,
    transformers

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs:
    src/,
    test/
  main-is: Main.hs
  build-depends:
    base == 4.*,
    containers,
    either,
    HUnit,
    mtl,
    parsec,
    reddit,
    text,
    transformers
  default-language: Haskell2010
  ghc-options: -Werror -Wall
